--- a/GamePortal/GamePortal.Web.Api/Web.config
+++ b/GamePortal/GamePortal.Web.Api/Web.config
@@ -4,9 +4,11 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+ 
   <configSections>
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+
     <sectionGroup name="elmah">
       <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
       <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
@@ -160,6 +162,10 @@
       </authorization>
       -->  
     </system.web>
+
+	  <connectionStrings>
+		  <add name="HangmanCon" connectionString="data source=(localdb)\MSSQLLocalDB;Initial Catalog=hangmandb;Integrated Security=True;" providerName="System.Data.SqlClient" />
+	  </connectionStrings>
     <system.webServer>
       <handlers>
         <add name="ELMAH" verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" preCondition="integratedMode" />
