--- a/GamePortal/GamePortal.Web.Api/packages.config
+++ b/GamePortal/GamePortal.Web.Api/packages.config
@@ -14,6 +14,7 @@
   <package id="IdentityServer3.AspNetIdentity" version="2.0.0" targetFramework="net472" />
   <package id="IdentityServer3.Contrib.AccessTokenValidation" version="4.1.16" targetFramework="net472" />
   <package id="jQuery" version="1.6.4" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.3" targetFramework="net472" />
@@ -37,6 +38,7 @@
   <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="5.6.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="5.6.0" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.1.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Cors" version="4.1.0" targetFramework="net472" />
   <package id="Microsoft.Owin.FileSystems" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Security" version="4.1.0" targetFramework="net472" />
@@ -45,6 +47,7 @@
   <package id="Microsoft.Owin.Security.Jwt" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" version="1.10.9" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Namotion.Reflection" version="1.0.11" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
